force-app/main/default/objects/DefaultCommunityProfile__c/DefaultCommunityProfile__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Profiles to be used in communities</description>
    <label>Default Community Profile</label>
</CustomObject>