force-app/main/default/objects/DefaultCommunityProfile__c/fields/ContactDefaultProfile__c.field-meta.xml
<CustomField>
    <fullName>ContactDefaultProfile__c</fullName>
    <label>Contact Default Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>