force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultCommunityPlusLoginCommunityId__c.field-meta.xml
<CustomField>
    <fullName>DefaultCommunityPlusLoginCommunityId__c</fullName>
    <label>Default Community Plus Login CommunityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>