force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultCommunityPlusLoginPermSet__c.field-meta.xml
<CustomField>
    <fullName>DefaultCommunityPlusLoginPermSet__c</fullName>
    <label>Default Community Plus Login Perm Set</label>
    <length>40</length>
    <type>Text</type>
</CustomField>