force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultCommunityPlusLoginProfile__c.field-meta.xml
<CustomField>
    <fullName>DefaultCommunityPlusLoginProfile__c</fullName>
    <label>Default Community Plus Login Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>