force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultCommunityPlusPermissionSetGroup__c.field-meta.xml
<CustomField>
    <fullName>DefaultCommunityPlusPermissionSetGroup__c</fullName>
    <label>Default Community Plus Perm. Set Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>