force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultCommunityPlusProfile__c.field-meta.xml
<CustomField>
    <fullName>DefaultCommunityPlusProfile__c</fullName>
    <label>Default Community Plus Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>