force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultPermissionSet__c.field-meta.xml
<CustomField>
    <fullName>DefaultPermissionSet__c</fullName>
    <label>Default Permission Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>