force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultPermissionSetGroup__c.field-meta.xml
<CustomField>
    <fullName>DefaultPermissionSetGroup__c</fullName>
    <label>Default Permission Set Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>