force-app/main/default/objects/DefaultCommunityProfile__c/fields/DefaultProfile__c.field-meta.xml
<CustomField>
    <fullName>DefaultProfile__c</fullName>
    <label>Default Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>