force-app/main/default/objects/DefaultCommunityProfile__c/fields/PersonAccountDefaultProfile__c.field-meta.xml
<CustomField>
    <fullName>PersonAccountDefaultProfile__c</fullName>
    <description>Communities for person account users</description>
    <label>Person Account Default Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>